Simplify text-align helpers and (hopefully) fix source order issue

--- a/stylesheets/_helpers.text-align.scss
+++ b/stylesheets/_helpers.text-align.scss
@@ -1,21 +1,13 @@
 // Text Aligment Helpers
 // ------------------------------------------------------------------------------------
-$alignment-units: (
-    left: 'l',
-    center: 'c',
-    right: 'r'
-);
+.tal { text-align: left !important; }
+.tac { text-align: center !important; }
+.tar { text-align: right !important; }
 
-@each $id, $position in $alignment-units {
-    .ta#{$position} { text-align: $id }
-
-    @if $beard-enable-responsive == true {
-        @each $key, $breakpoint in $breakpoints {
-            .#{$key}-ta#{$position} {
-                @include media($breakpoint) {
-                    text-align: $id;
-                }
-            }
-        }
+@if $beard-enable-responsive == true {
+    @each $key, $breakpoint in $breakpoints {
+        .#{$key}-tal { @include media($breakpoint) { text-align: left !important; } }
+        .#{$key}-tac { @include media($breakpoint) { text-align: center !important; } }
+        .#{$key}-tar { @include media($breakpoint) { text-align: right !important; } }
     }
 }
